# shackle

./: Cargo.toml  build.rs  deny.toml  flake.nix  fprintd.patch
src/: app.rs  auth.rs  config.rs  dbus.rs  fprint.rs  instance.rs  main.rs  pam.rs  signal_handler.rs  sole_instance.rs  stack.rs  tokio_runtime.rs  ui.rs  user_image.rs
src/auth/: fprint.rs  mod.rs  signal.rs
src/style/: main.scss
