[package]
name = "shackle"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.35.1", features = ["signal", "fs"] }
pam = "0.8.0"
users = "0.11.0"
home = "0.5.9"

[dependencies.iced]
git = "https://github.com/pop-os/iced.git"
default-features = false
features = ["tokio", "wayland", "debug", "a11y", "image"]
rev = "51723e87f7de6f9ce8943c28acd0ab62270675f6"

[dependencies.iced_runtime]
git = "https://github.com/pop-os/iced.git"
rev = "51723e87f7de6f9ce8943c28acd0ab62270675f6"
