[package]
name = "shackle"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.35.1", features = ["signal", "fs"] }
pam = "0.8.0"
users = "0.11.0"
home = "0.5.9"
once_cell = "1.19.0"
fork = "0.1.23"
futures = "0.3.30"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
clap = { version = "4.5.0", features = [ "derive" ] }

[dependencies.iced]
git = "https://github.com/pop-os/iced.git"
default-features = false
features = ["tokio", "wayland", "image", "svg"]
rev = "c47171dabe3e88286fdb8bde236ef0c038e9d8fe"

[dependencies.iced_runtime]
git = "https://github.com/pop-os/iced.git"
rev = "c47171dabe3e88286fdb8bde236ef0c038e9d8fe"

[build-dependencies]
dbus-codegen = "0.10.0"
