[package]
name = "shackle"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.35.1", features = ["signal", "fs"] }
pam = "0.8.0"
users = "0.11.0"
home = "0.5.9"
fork = "0.1.23"
futures = "0.3.30"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
clap = { version = "4.5.0", features = [ "derive" ] }
gtk = { package = "gtk4", version = "0.10.0", features = [ "v4_18" ] }
gio = "0.21.1"
glib = "0.21.1"
gtk4-session-lock = { version = "0.3.0", features = [ "v1_2" ] }

[build-dependencies]
dbus-codegen = "0.10.0"
